# unix-v11

./: .gitignore  CLA  CONTRIBUTING  Cargo.toml  LICENCE  OVMF.tar.Z  build  build-aarch64.sh  build-amd64.sh
.cargo/: config.toml
cfg/: aarch64-uefi.json  aarch64-unix-baremetal.json  amd64-uefi.json  amd64-unix-baremetal.json
corecli/: dynlib.ld  user.ld
corecli/aleph/: Cargo.toml
corecli/aleph/.cargo/: config.toml
corecli/aleph/src/: main.rs
efi/: Cargo.toml  riscv64gc-unknown-uefi-elf.json
efi/.cargo/: config.toml
efi/src/: kargs.rs  main.rs  sysinfo.rs
efi/src/amd64/: mod.rs
efi/src/arch/: mod.rs
exec/: all  build  img  run
kernel/: Cargo.toml  link.ld
kernel/.cargo/: config.toml
kernel/src/: glacier.rs  kargs.rs  kreq.rs  main.rs  ram.rs  ramblock.rs  reloc.rs  sort.rs  sysinfo.rs
kernel/src/aarch64/: exceptions.rs  mmu.rs  mod.rs
kernel/src/amd64/: mmu.rs  mod.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: exc.rs  exceptions.rs  intc.rs  inter.rs  mmu.rs  mod.rs  proc.rs  rvm.rs
kernel/src/arch/amd64/: exc.rs  exceptions.rs  intc.rs  inter.rs  mmu.rs  mod.rs  proc.rs  rvm.rs
kernel/src/arch/riscv64/: mmu.rs  mod.rs
kernel/src/device/: acpi.rs  block.rs  cpu.rs  mod.rs  nvme.rs  usb.rs  vga.rs
kernel/src/filesys/: dev.rs  devfs.rs  fat32.rs  gpt.rs  mod.rs  vfn.rs  vfs.rs
kernel/src/filesys/part/: fat32.rs  gpt.rs  mod.rs
kernel/src/filesys/parts/: fat.rs  fat32.rs  mod.rs  virtual.rs  vpart.rs
kernel/src/proc/: ctrlblk.rs  kstack.rs  mod.rs
kernel/src/ram/: glacier.rs  mod.rs  mutex.rs  physalloc.rs  reloc.rs
(+3 files in other folders)
