[package]
name = "unix-v11-kernel"
version = "0.0.1"
edition = "2024"

[dependencies]
acpi = "6.0.1"
embedded-sdmmc = "0.9.0"
fat32rs = "0.0.1"
fdt = "0.1.5"
nvme-rs = "0.6.2"
spin = "0.10.0"
talc = "4.4.3"
usb-device = "0.3.2"
wikisort = "1.0.0"
zerocopy = { version = "0.8.27", features = ["derive"] }

[[bin]]
name = "unix-v11-kernel"
path = "src/main.rs"

[lib]
name = "unix_v11_kernel"
path = "src/main.rs"
