[package]
name = "unix-v11-kernel"
version = "0.0.1"
edition = "2024"

[dependencies]
acpi = "6.0.1"
embedded-sdmmc = "0.9.0"
fdt = "0.1.5"
lock_api = "0.4.14"
nvme-oxide = "0.3.0"
seq-macro = "0.3.6"
spin = "0.10.0"
talc = { version = "4.4.3", features = ["counters", "lock_api"], default-features = false }
usb-oxide = "0.1.0"
wikisort = "1.0.0"
xmas-elf = "0.10.0"
zerocopy = { version = "0.8", features = ["derive"] }
